fixed spacing of navbar connector

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -179,7 +179,9 @@ body {
       color: #fff; }
   .footer .footer-bav-connector {
     width: 50px;
-    border: 1px solid #BBB; }
+    border: 1px solid #BBB;
+    margin-left: -5px;
+    margin-right: -5px; }
 
 body {
   padding-bottom: 100px; }
