--- a/assets/css/components/form.scss
+++ b/assets/css/components/form.scss
@@ -329,5 +329,7 @@
 	.footer-bav-connector {
 		width: 50px;
 		border: 1px solid #BBB;
+		margin-left: -5px;
+		margin-right: -5px;
 	}
 }
